  unicode names and translate them correctly into utf-8 regardless of codepage
* Removed autosearch string, it's not used any more
* Fixed a tth hash speed bug (hashing should be much faster now)
* File listings are now generated on the fly when someone needs them
* Added UPnP support (thanks mark gillespie)
* Ctrl-L now opens file lists (thanks garg)
* Various ADC patches (thanks sedulus)


 -- 0.4032 2004-08-08 --
* Fixed issue with autosearch not getting filelists
* Fixed an issue with autosearch by tth not being done
* Added folder histore for single file downloads (thanks slowmo)
* Fishing locale from os, changes string representations in some places (thanks garg)
* Caseless icon optimization (thanks garg)
* CTRL-E shortcut for refresh (thanks garg)
* Fixed a process termination issue (thanks defr)
* DCTC file not available detected (thanks defr)
* Fixed bad window size being saved for minimised windows (thanks trem)
* Fixed an issue with the ADC parser (thanks trem)
* More WTL 7.5 preparations (thanks garg)
* Added a switch to ease the life of the UPX compressor (exe compressors suck btw) (thanks garg)
* Added irc:// as web link (thanks ullner)
* Fixed an issue with the adc parser (thanks sed)
* TTH trees no longer require a slot
* Added options to open file lists and pm's in background (thanks sed)
* Minor number formatting fixes (thanks palm and garg)
* Some more linux compile fixes (thanks palm)
* Additional translation strings (thanks garg)
* Fixed own search results bug (thanks garg)
* <64KiB files auto-highest priority (thanks garg)
* Fixed search in utf-8 file lists (thanks fleetcommand)
* Fixed utf-8 encoding/decoding, chinese and other multi-byte scripts should
  now work ok (thanks liny)
* Removed obsolete Import from NMDC queue (blame cologic)
* Added option to disable bolding for hub frames (thanks ullner)
* Fixed a small leak in the Search Frame (thanks psf8500)
* Added bitzi.com lookup and magnet link copy (thanks garg)