@@ -459,7 +459,9 @@ string ResourceManager::strings[] = {
 "Users", 
 "Video", 
 "View as text", 
+"Virtual name", 
 "Virtual directory name already exists", 
+"Name under which the others see the directory", 
 "Waiting...", 
 "Waiting (User online)", 
 "Waiting (%d of %d users online)", 
@@ -926,7 +928,9 @@ string ResourceManager::names[] = {
 "Users", 
 "Video", 
 "ViewAsText", 
+"VirtualName", 
 "VirtualNameExists", 
+"VirtualNameLong", 
 "Waiting", 
 "WaitingUserOnline", 
 "WaitingUsersOnline", 
