@@ -462,7 +462,9 @@ enum Strings { // @DontAdd
 	USERS, // "Users"
 	VIDEO, // "Video"
 	VIEW_AS_TEXT, // "View as text"
+	VIRTUAL_NAME, // "Virtual name"
 	VIRTUAL_NAME_EXISTS, // "Virtual directory name already exists"
+	VIRTUAL_NAME_LONG, // "Name under which the others see the directory"
 	WAITING, // "Waiting..."
 	WAITING_USER_ONLINE, // "Waiting (User online)"
 	WAITING_USERS_ONLINE, // "Waiting (%d of %d users online)"
