@@ -19,6 +19,8 @@
 * Added UPnP support (thanks mark gillespie)
 * Ctrl-L now opens file lists (thanks garg)
 * Various ADC patches (thanks sedulus)
+* Slightly changed temporary download name
+* Added virtual directory names to shares
 
 
  -- 0.4032 2004-08-08 --
